# new_project

./: pyproject.toml
src/big_data_git/: main.py
src/big_data_git/job/: data.csv
