[project]
name = "big-data-git"
version = "1.0.0"
description = "big_data_project"
authors = [
    {name = "moumnassi",email = "moumnassi245@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark (>=3.5.4,<4.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
